k8s/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-liquidations-consumer-elastic
spec:
  selector:
    matchLabels:
      app: ms-liquidations-consumer-elastic
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: ms-liquidations-consumer-elastic
        version: v1
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: ms-liquidations-consumer-elastic
        image: registry.dev.redbee.io/phe/ms-liquidations-consumer-elastic:v0.0.5
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "0.25"
          limits:
            memory: "1024Mi"
            cpu: "1"
        livenessProbe:
          httpGet:
            port: http
            path: /actuator/health/liveness
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            port: http
            path: /actuator/health/readiness
          initialDelaySeconds: 60
          periodSeconds: 5
          failureThreshold: 3
