k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ms-liquidations-consumer-elastic
spec:
  selector:
    app: ms-liquidations-consumer-elastic
  ports:
  - name: http
    protocol: TCP
    port: 8080
